src/components/navigation.module.css
.navigation {
  display: flex;
  justify-content: center;
  list-style: none;
  padding: 0;
  margin: 0;
  /*
  height: 20vh;
  max-height: 100px;
  font-size: 1.25em;*/
  background-color: #fff;
  width: auto;
  height: auto;
  line-height: auto !important;
}

.navigationItem, .navigationDropdown {
  display: inline-flex;
  align-items: center;
  margin: 0 1em;
}

.navigationItem a, .navigationDropdown a {
  /*color: currentColor;*/
  color:#666;
}
.navigationItem:hover, .navigationDropdown:hover {
  background-color: #F1F4F5;
}
.navigationItem a:hover, .navigationDropdown a:hover {
  background-color: #E6E9EB;
}



/* second level navigation colors */
.navigationDropItem  a {
  background-color: #F1F4F5;
  padding: 14px 0px 14px 10px;
  }
  
  /* second level navigation colors */
  ..navigationDropdown:hover .navigationDropItem a {
    color:#535D62;
  }
  
  /* second level navigation colors */
  .navigationDropdown .navigationDropItem:hover a {
    background-color: #E6E9EB;
    color:#535D62;
  }
  
  /* third level navigation colors */
  .navigationDropdown .navigationDropItem .navigationDropItem a {
  background-color: #E6E9EB;
  }
  
  /* navigation hover colors */
  .navigationDropdown .navigationDropItem .navigationDropItem a:hover {
  background-color: #D5DCE0;
  }
  /* skip links */
.buttonSkipLink:not(:focus):not(:hover) {
  -webkit-transform: translateY(-4em);
  -ms-transform: translateY(-4em);
  transform: translateY(-4em);
  opacity: 0;
}
button:focus, 
.buttonSkipLink:focus {
    border-color: #062434;
}
.buttonSkipLink:hover, .buttoSkipLink:focus, 
button:hover, button:focus {
    background-color: #08364E;
    text-decoration: none;
    color: #fff;
}
.buttonSkipLink {
    margin: 0 auto;
    /*position: absolute;*/
    z-index: 20;
    /*left: 0;
    right: 0;
    top: 1em;*/
    width: 10em;
    opacity: 1;
}

